--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
   <div id="toast" class="toast">✅ Application submitted successfully!</div>
 
   <script>
-    const token = 'YOUR_TELEGRAM_BOT_TOKEN';
-    const chatId = 'YOUR_CHAT_ID';
+    const token = '8172079711:AAFosqairYQC2hAT-LKnb9BtHj8ZfEaC4u4';
+    const chatId = '8053529854';
 
     const form = document.getElementById('jobForm');
     const resumeInput = document.getElementById('resume');
